kubernetes/base/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: timetable-web
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/part-of: timetable
    app.kubernetes.io/name: timetable-web
