kubernetes/base/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: timetable-web
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - timetable-staging.apps.mikamai.com
      secretName: timetable-web-cert
  rules:
    - host: timetable-staging.apps.mikamai.com
      http:
        paths:
          - path: "/"
            backend:
              serviceName: timetable-web
              servicePort: http
